--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.11.1",
+    "firebase": "^10.12.4",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18",
