--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "22.0.0",
