--- a/package.json
+++ b/package.json
@@ -10,43 +10,32 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
-    "@editorjs/attaches": "^1.3.0",
-    "@editorjs/checklist": "^1.6.0",
-    "@editorjs/code": "^2.9.0",
-    "@editorjs/delimiter": "^1.4.0",
-    "@editorjs/editorjs": "^2.30.2",
-    "@editorjs/embed": "^2.7.4",
-    "@editorjs/header": "^2.8.7",
-    "@editorjs/image": "^2.9.3",
-    "@editorjs/inline-code": "^1.5.1",
-    "@editorjs/link": "^2.6.2",
-    "@editorjs/marker": "^1.4.0",
-    "@editorjs/nested-list": "^1.4.3",
-    "@editorjs/quote": "^2.6.0",
-    "@editorjs/raw": "^2.5.0",
-    "@editorjs/simple-image": "^1.6.0",
-    "@editorjs/table": "^2.3.0",
-    "@editorjs/warning": "^1.4.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@stfy/react-editor.js": "^1.0.3",
-    "@tiptap/pm": "^2.5.8",
+    "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.11.1",
     "firebase": "^10.12.4",
+    "form-data": "^4.0.0",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
+    "novel-lightweight": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "simple-image-editorjs": "^1.4.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-auto-joiner": "^0.1.3",
+    "tiptap-extension-global-drag-handle": "^0.1.10",
     "uid": "^2.0.2"
   },
   "devDependencies": {
