--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@liveblocks/client": "^2.4.0",
+    "@liveblocks/react": "^2.4.0",
+    "@liveblocks/react-ui": "^2.4.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
