--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
     "@liveblocks/client": "^2.4.0",
+    "@liveblocks/node": "^2.4.0",
     "@liveblocks/react": "^2.4.0",
     "@liveblocks/react-ui": "^2.4.0",
     "@radix-ui/react-dialog": "^1.1.1",
