--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@google/generative-ai": "^0.16.0",
     "@liveblocks/client": "^2.4.0",
     "@liveblocks/node": "^2.4.0",
     "@liveblocks/react": "^2.4.0",
