--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@tiptap/extension-code-block": "^2.5.9",
+    "@tiptap/extension-table": "^2.5.9",
+    "@tiptap/extension-table-cell": "^2.5.9",
+    "@tiptap/extension-table-header": "^2.5.9",
+    "@tiptap/extension-table-row": "^2.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.11.1",
